--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/libs/angular-gridster.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/card.css" />
     
     <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
     <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
