--- a/index.html
+++ b/index.html
@@ -8,55 +8,31 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width" />
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/libs/angular-gridster.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="../bower_components/angular-gridster/dist/angular-gridster.min.css" rel="stylesheet"/>
     
-    <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.11/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.11/angular-route.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-sortable/0.13.3/sortable.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
+    <link href="stylesheets/style.css" rel="stylesheet"/>
+    <link href="stylesheets/card.css" rel="stylesheet"/>
 
-    <script src="js/libs/angular-gridster.min.js"></script>
-    
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/angular-route/angular-route.js"></script>
+    <script src="../bower_components/angular-ui-sortable/sortable.js"></script>
+    <script src="../bower_components/angular-ui-bootstrap/dist/ui-bootstrap-tpls-0.12.0.min.js"></script>
+    <script src="../bower_components/angular-gridster/dist/angular-gridster.min.js"></script>
 
-    <script type="text/javascript">
-        (function() {
-        	angular.module('app', ['gridster', 'ui.bootstrap', 'ngRoute', 'ui.sortable'])
-        		.config(['$routeProvider',
-        			function($routeProvider) {
-        				$routeProvider
-                            .when('/trello', {
-                                templateUrl: 'templates/trello/view.html',
-                                controller: 'DashboardCtrl'
-                            })
-                            .otherwise({
-                                redirectTo: '/trello'
-                            });
-                    }
-        		])
-        		.controller('RootCtrl', function($scope) {
-        			$scope.$on('$locationChangeStart', function(e, next, current) {
-        				$scope.page = next.split('/').splice(-1);
-        				$scope.styleUrl = 'templates/' + $scope.page + '/style.css'
-        			});
-        		});
-        })();
-    </script>
-
+    <script src="app.js"></script>
     <script src="templates/trello/script.js"></script>
 </head>
 
-<body ng-app="app">
+<body ng-app="trelloRedmine">
     <div ng-controller="RootCtrl">
         <link rel="stylesheet" ng-href="{{ styleUrl }}" />
 
         <div class="navbar navbar-inverse">
             <ul class="nav navbar-nav navbar-right">
-                <li ng-class="{active: page == 'trello'}"><a href="#/trello">Trello</a>
-                </li>
+                <li ng-class="{active: page == 'trello'}"><a href="#/trello">Trello</a></li>
             </ul>
         </div>
 
