--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Trello for Redmine</title>
+    <base href="/" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width" />
 
@@ -21,6 +22,8 @@
     <script src="../bower_components/angular-ui-sortable/sortable.js"></script>
     <script src="../bower_components/angular-ui-bootstrap/dist/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="../bower_components/angular-gridster/dist/angular-gridster.min.js"></script>
+
+    <script src="javascripts/ngImg.js"></script>
 
     <script src="app.js"></script>
     <script src="templates/trello/script.js"></script>
