Identation and add ngDialog module

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <meta name="viewport" content="width=device-width" />
 
     <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="../bower_components/angular-gridster/dist/angular-gridster.min.css" rel="stylesheet"/>
-    
-    <link href="stylesheets/style.css" rel="stylesheet"/>
-    <link href="stylesheets/card.css" rel="stylesheet"/>
+    <link href="../bower_components/angular-gridster/dist/angular-gridster.min.css" rel="stylesheet" />
+
+    <link href="stylesheets/style.css" rel="stylesheet" />
+    <link href="stylesheets/card.css" rel="stylesheet" />
 
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-ui-sortable/sortable.js"></script>
+    <script src="../bower_components/ngDialog/js/ngDialog.js"></script>
+
     <script src="../bower_components/angular-ui-bootstrap/dist/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="../bower_components/angular-gridster/dist/angular-gridster.min.js"></script>
 
@@ -32,7 +34,8 @@
 
         <div class="navbar navbar-inverse">
             <ul class="nav navbar-nav navbar-right">
-                <li ng-class="{active: page == 'trello'}"><a href="#/trello">Trello</a></li>
+                <li ng-class="{active: page == 'trello'}"><a href="#/trello">Trello</a>
+                </li>
             </ul>
         </div>
 
