--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="../bower_components/angular-gridster/dist/angular-gridster.min.css" rel="stylesheet" />
     <link href="../bower_components/ngDialog/css/ngDialog.css" rel="stylesheet" />
+    <link href="../bower_components/fontawesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="../bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
 
     <link href="stylesheets/style.css" rel="stylesheet" />
     <link href="stylesheets/card.css" rel="stylesheet" />
@@ -22,6 +24,7 @@
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-ui-sortable/sortable.js"></script>
     <script src="../bower_components/ngDialog/js/ngDialog.js"></script>
+    <script src="../bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 
     <script src="../bower_components/angular-ui-bootstrap/dist/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="../bower_components/angular-gridster/dist/angular-gridster.min.js"></script>
