--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
-    <script src="../bower_components/angular-strap/dist/angular-strap.min.js"></script>
+    <script src="../bower_components/angular-strap/dist/angular-strap.js"></script>
     <script src="../bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
     <script src="../bower_components/angular-ui-sortable/sortable.js"></script>
     <script src="../bower_components/ngDialog/js/ngDialog.js"></script>
