--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
     <script src="../bower_components/angular-ui-bootstrap/dist/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="../bower_components/angular-gridster/dist/angular-gridster.min.js"></script>
 
-    <script src="javascripts/ngImg.js"></script>
-
     <script src="app.js"></script>
     <script src="templates/trello/script.js"></script>
 </head>
@@ -47,9 +45,12 @@
             <ul class="nav navbar-nav navbar-right">
                 <li ng-class="{active: page == 'trello'}"><a href="#/trello">Trello</a>
                 </li>
-                <li style="color:white;">{{dashboard.title}}</li>
-                <li style="color:white;">logged hours: {{dashboard.hours}}</li>
             </ul>
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="#">Project Name: {{dashboard.title}}</a></li>
+                <li><a href="#">Project Logged Hours: {{dashboard.hours}}<a></li>
+            </ul>
+            <input type="text" ng-model="project_id"> <button ng-click="load_project()">Load Project</button>
         </div>
 
         <div class="container" ng-view></div>
