--- a/index.html
+++ b/index.html
@@ -45,19 +45,15 @@
         <div class="navbar navbar-inverse">
             <ul class="nav navbar-nav navbar-left">
                 <li class="dropdown" ng-class="{active: page == 'trello'}">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Trello <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{current_project.project.name}} <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li ng-repeat="project in user_projects track by $index">
+                        <a ng-href="/trello/{{project.project.id}}">{{project.project.name}}</a>
+                    </li>
                   </ul>
                 </li>
-                <li class="project-name"><span>{{dashboard.title}}</span></li>
-                <li class="project-hours"><span>logged hours: {{dashboard.hours}}</span></li>
+                <!-- <li class="project-name"><span>{{dashboard.title}}</span></li> -->
+                <!-- <li class="project-hours"><span>logged hours: {{dashboard.hours}}</span></li> -->
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Search" ng-model="project_id">
