--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                     </li>
                   </ul>
                 </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Available Status Lists<span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li ng-repeat="widget in widgets track by $index">
+                        <span>{{widget.title}}  <input type="checkbox" ng-model="widget.allowed"></span>
+                    </li>
+                  </ul>
+                </li>
                 <!-- <li class="project-name"><span>{{dashboard.title}}</span></li> -->
                 <!-- <li class="project-hours"><span>logged hours: {{dashboard.hours}}</span></li> -->
                 <form class="navbar-form navbar-right" role="search">
