--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="../bower_components/ngDialog/js/ngDialog.js"></script>
     <script src="../bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 
-    <script src="../bower_components/angular-ui-bootstrap/dist/ui-bootstrap-tpls-0.12.0.min.js"></script>
+    <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="../bower_components/angular-gridster/dist/angular-gridster.min.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
