Gravatr image for userstory

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="../bower_components/angular-gridster/dist/angular-gridster.min.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    
+    <script src="../bower_components/angular-gravatar/build/md5.js"></script>
+    <script src="../bower_components/angular-gravatar/build/angular-gravatar.js"></script>
 
     <script src="app.js"></script>
     <script src="templates/trello/script.js"></script>
