--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <script src="../bower_components/angular-gravatar/build/md5.js"></script>
     <script src="../bower_components/angular-gravatar/build/angular-gravatar.js"></script>
     <script src="../bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+
     <script src="app.js"></script>
     <script src="templates/trello/script.js"></script>
 </head>
