--- a/index.html
+++ b/index.html
@@ -37,47 +37,14 @@
     <script src="../bower_components/angular-gravatar/build/angular-gravatar.js"></script>
     <script src="../bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="../bower_components/ngstorage/ngStorage.js"></script>
 
     <script src="app.js"></script>
     <script src="templates/trello/script.js"></script>
 </head>
 
 <body ng-app="trelloRedmine">
-    <div ng-controller="RootCtrl">
-        <link rel="stylesheet" ng-href="{{ styleUrl }}" />
-
-        <div class="navbar navbar-inverse">
-            <ul class="nav navbar-nav navbar-left">
-                <li class="dropdown" ng-class="{active: page == 'trello'}">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{current_project.project.name}} <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li ng-repeat="project in user_projects track by $index">
-                        <a ng-href="/trello/{{project.project.id}}">{{project.project.name}}</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Available Status Lists<span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li ng-repeat="widget in widgets track by $index">
-                        <span>{{widget.title}}  <input type="checkbox" ng-model="widget.allowed"></span>
-                    </li>
-                  </ul>
-                </li>
-                <!-- <li class="project-name"><span>{{dashboard.title}}</span></li> -->
-                <!-- <li class="project-hours"><span>logged hours: {{dashboard.hours}}</span></li> -->
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Search" ng-model="project_id">
-                    </div>
-                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-                </form>
-            </ul>
-        </div>
-
-        <div class="container" ng-view></div>
-
-    </div>
+    <div class="container" ng-view></div>
 </body>
 
 </html>
