[fix] trello templates pathes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <script src="../bower_components/ngstorage/ngStorage.js"></script>
 
     <script src="app.js"></script>
-    <script src="templates/trello/script.js"></script>
+    <script src="templates/script.js"></script>
 </head>
 
 <body ng-app="trelloRedmine">
