[fix] add bootstrap-additions css file locally

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="../bower_components/ngDialog/css/ngDialog.css" rel="stylesheet" />
     <link href="../bower_components/fontawesome/css/font-awesome.css" rel="stylesheet" />
     <link href="../bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//mgcrea.github.io/angular-strap/static/styles/bootstrap-additions.min.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap-additions.min.css">
 
     <link href="stylesheets/style.css" rel="stylesheet" />
     <link href="stylesheets/card.css" rel="stylesheet" />
