--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link href="../bower_components/ngDialog/css/ngDialog.css" rel="stylesheet" />
     <link href="../bower_components/fontawesome/css/font-awesome.css" rel="stylesheet" />
     <link href="../bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap-additions.min.css">
+    <link rel="stylesheet" type="text/css" href="../assets/stylesheets/bootstrap-additions.min.css">
 
-    <link href="stylesheets/style.css" rel="stylesheet" />
-    <link href="stylesheets/card.css" rel="stylesheet" />
+    <link href="../assets/stylesheets/style.css" rel="stylesheet" />
+    <link href="../assets/stylesheets/card.css" rel="stylesheet" />
 
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/jquery-ui/jquery-ui.js"></script>
